compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    TRUE
    WHITE_SPACE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracoes bloco
Rule 2     declaracoes -> def_const def_tipos def_var def_rot
Rule 3     def_const -> CONST constante SEMICOLON list_const
Rule 4     def_const -> empty
Rule 5     list_const -> constante SEMICOLON list_const
Rule 6     list_const -> empty
Rule 7     constante -> ID DOUBLEEQUALS const_valor
Rule 8     const_valor -> STRING
Rule 9     const_valor -> exp_mat
Rule 10    def_tipos -> TYPE tipo SEMICOLON list_tipos
Rule 11    def_tipos -> empty
Rule 12    list_tipos -> tipo SEMICOLON list_tipos
Rule 13    list_tipos -> empty
Rule 14    tipo -> ID DOUBLEEQUALS tipo_dado
Rule 15    tipo_dado -> INTEGER
Rule 16    tipo_dado -> REAL
Rule 17    tipo_dado -> ARRAY LSBRACKET NUMBER RSBRACKET OF tipo_dado
Rule 18    tipo_dado -> RECORD campos END
Rule 19    tipo_dado -> ID
Rule 20    campos -> ID COLON tipo_dado
Rule 21    campos -> ID COLON tipo_dado SEMICOLON campos
Rule 22    def_var -> VAR variavel SEMICOLON list_var
Rule 23    def_var -> empty
Rule 24    list_var -> variavel SEMICOLON list_var
Rule 25    list_var -> empty
Rule 26    variavel -> ID lista_id COLON tipo_dado
Rule 27    lista_id -> COMMA ID lista_id
Rule 28    lista_id -> empty
Rule 29    def_rot -> nome_rotina def_var bloco def_rot
Rule 30    def_rot -> empty
Rule 31    nome_rotina -> FUNCTION ID param_rot COLON tipo_dado
Rule 32    nome_rotina -> PROCEDURE ID param_rot
Rule 33    param_rot -> LPAREN campos RPAREN
Rule 34    param_rot -> empty
Rule 35    bloco -> BEGIN comando SEMICOLON lista_com END
Rule 36    bloco -> COLON comando
Rule 37    lista_com -> comando SEMICOLON lista_com
Rule 38    lista_com -> empty
Rule 39    comando -> ID nome atrib
Rule 40    comando -> WHILE exp_logica DO bloco
Rule 41    comando -> IF exp_logica THEN bloco else
Rule 42    comando -> RETURN exp_logica
Rule 43    comando -> WRITE exp_mat
Rule 44    comando -> READ ID nome
Rule 45    else -> ELSE bloco
Rule 46    else -> empty
Rule 47    atrib -> ASSIGNMENT exp_mat
Rule 48    atrib -> empty
Rule 49    lista_param -> parametro COMMA lista_param
Rule 50    lista_param -> parametro
Rule 51    lista_param -> empty
Rule 52    op_logico -> MORETHAN
Rule 53    op_logico -> LESSTHAN
Rule 54    op_logico -> EQUALS
Rule 55    op_logico -> NOT
Rule 56    op_logico -> ARROW
Rule 57    op_logico -> LESSOREQUAL
Rule 58    exp_logica -> exp_mat op_logico exp_logica
Rule 59    exp_logica -> exp_mat
Rule 60    exp_mat -> parametro op_mat exp_mat
Rule 61    exp_mat -> parametro
Rule 62    op_mat -> PLUS
Rule 63    op_mat -> MINUS
Rule 64    op_mat -> TIMES
Rule 65    op_mat -> DIVIDE
Rule 66    parametro -> ID nome
Rule 67    parametro -> NUMBER
Rule 68    nome -> DOT ID nome
Rule 69    nome -> LSBRACKET parametro RSBRACKET
Rule 70    nome -> LPAREN lista_param RPAREN
Rule 71    nome -> empty
Rule 72    empty -> <empty>

Terminals, with rules where they appear

ARRAY                : 17
ARROW                : 56
ASSIGNMENT           : 47
BEGIN                : 35
COLON                : 20 21 26 31 36
COMMA                : 27 49
CONST                : 3
DIVIDE               : 65
DO                   : 40
DOT                  : 68
DOUBLEEQUALS         : 7 14
ELSE                 : 45
END                  : 18 35
EQUALS               : 54
FALSE                : 
FUNCTION             : 31
ID                   : 7 14 19 20 21 26 27 31 32 39 44 66 68
IF                   : 41
INTEGER              : 15
LESSOREQUAL          : 57
LESSTHAN             : 53
LPAREN               : 33 70
LSBRACKET            : 17 69
MINUS                : 63
MORETHAN             : 52
NOT                  : 55
NUMBER               : 17 67
OF                   : 17
PLUS                 : 62
PROCEDURE            : 32
READ                 : 44
REAL                 : 16
RECORD               : 18
RETURN               : 42
RPAREN               : 33 70
RSBRACKET            : 17 69
SEMICOLON            : 3 5 10 12 21 22 24 35 37
STRING               : 8
THEN                 : 41
TIMES                : 64
TRUE                 : 
TYPE                 : 10
VAR                  : 22
WHILE                : 40
WHITE_SPACE          : 
WRITE                : 43
error                : 

Nonterminals, with rules where they appear

atrib                : 39
bloco                : 1 29 40 41 45
campos               : 18 21 33
comando              : 35 36 37
const_valor          : 7
constante            : 3 5
declaracoes          : 1
def_const            : 2
def_rot              : 2 29
def_tipos            : 2
def_var              : 2 29
else                 : 41
empty                : 4 6 11 13 23 25 28 30 34 38 46 48 51 71
exp_logica           : 40 41 42 58
exp_mat              : 9 43 47 58 59 60
list_const           : 3 5
list_tipos           : 10 12
list_var             : 22 24
lista_com            : 35 37
lista_id             : 26 27
lista_param          : 49 70
nome                 : 39 44 66 68
nome_rotina          : 29
op_logico            : 58
op_mat               : 60
param_rot            : 31 32
parametro            : 49 50 60 61 69
programa             : 0
tipo                 : 10 12
tipo_dado            : 14 17 20 21 26 31
variavel             : 22 24

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracoes bloco
    (2) declaracoes -> . def_const def_tipos def_var def_rot
    (3) def_const -> . CONST constante SEMICOLON list_const
    (4) def_const -> . empty
    (72) empty -> .

    CONST           shift and go to state 4
    TYPE            reduce using rule 72 (empty -> .)
    VAR             reduce using rule 72 (empty -> .)
    FUNCTION        reduce using rule 72 (empty -> .)
    PROCEDURE       reduce using rule 72 (empty -> .)
    BEGIN           reduce using rule 72 (empty -> .)
    COLON           reduce using rule 72 (empty -> .)

    programa                       shift and go to state 1
    declaracoes                    shift and go to state 2
    def_const                      shift and go to state 3
    empty                          shift and go to state 5

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracoes . bloco
    (35) bloco -> . BEGIN comando SEMICOLON lista_com END
    (36) bloco -> . COLON comando

    BEGIN           shift and go to state 7
    COLON           shift and go to state 8

    bloco                          shift and go to state 6

state 3

    (2) declaracoes -> def_const . def_tipos def_var def_rot
    (10) def_tipos -> . TYPE tipo SEMICOLON list_tipos
    (11) def_tipos -> . empty
    (72) empty -> .

    TYPE            shift and go to state 10
    VAR             reduce using rule 72 (empty -> .)
    FUNCTION        reduce using rule 72 (empty -> .)
    PROCEDURE       reduce using rule 72 (empty -> .)
    BEGIN           reduce using rule 72 (empty -> .)
    COLON           reduce using rule 72 (empty -> .)

    def_tipos                      shift and go to state 9
    empty                          shift and go to state 11

state 4

    (3) def_const -> CONST . constante SEMICOLON list_const
    (7) constante -> . ID DOUBLEEQUALS const_valor

    ID              shift and go to state 13

    constante                      shift and go to state 12

state 5

    (4) def_const -> empty .

    TYPE            reduce using rule 4 (def_const -> empty .)
    VAR             reduce using rule 4 (def_const -> empty .)
    FUNCTION        reduce using rule 4 (def_const -> empty .)
    PROCEDURE       reduce using rule 4 (def_const -> empty .)
    BEGIN           reduce using rule 4 (def_const -> empty .)
    COLON           reduce using rule 4 (def_const -> empty .)


state 6

    (1) programa -> declaracoes bloco .

    $end            reduce using rule 1 (programa -> declaracoes bloco .)


state 7

    (35) bloco -> BEGIN . comando SEMICOLON lista_com END
    (39) comando -> . ID nome atrib
    (40) comando -> . WHILE exp_logica DO bloco
    (41) comando -> . IF exp_logica THEN bloco else
    (42) comando -> . RETURN exp_logica
    (43) comando -> . WRITE exp_mat
    (44) comando -> . READ ID nome

    ID              shift and go to state 15
    WHILE           shift and go to state 16
    IF              shift and go to state 17
    RETURN          shift and go to state 18
    WRITE           shift and go to state 19
    READ            shift and go to state 20

    comando                        shift and go to state 14

state 8

    (36) bloco -> COLON . comando
    (39) comando -> . ID nome atrib
    (40) comando -> . WHILE exp_logica DO bloco
    (41) comando -> . IF exp_logica THEN bloco else
    (42) comando -> . RETURN exp_logica
    (43) comando -> . WRITE exp_mat
    (44) comando -> . READ ID nome

    ID              shift and go to state 15
    WHILE           shift and go to state 16
    IF              shift and go to state 17
    RETURN          shift and go to state 18
    WRITE           shift and go to state 19
    READ            shift and go to state 20

    comando                        shift and go to state 21

state 9

    (2) declaracoes -> def_const def_tipos . def_var def_rot
    (22) def_var -> . VAR variavel SEMICOLON list_var
    (23) def_var -> . empty
    (72) empty -> .

    VAR             shift and go to state 23
    FUNCTION        reduce using rule 72 (empty -> .)
    PROCEDURE       reduce using rule 72 (empty -> .)
    BEGIN           reduce using rule 72 (empty -> .)
    COLON           reduce using rule 72 (empty -> .)

    def_var                        shift and go to state 22
    empty                          shift and go to state 24

state 10

    (10) def_tipos -> TYPE . tipo SEMICOLON list_tipos
    (14) tipo -> . ID DOUBLEEQUALS tipo_dado

    ID              shift and go to state 26

    tipo                           shift and go to state 25

state 11

    (11) def_tipos -> empty .

    VAR             reduce using rule 11 (def_tipos -> empty .)
    FUNCTION        reduce using rule 11 (def_tipos -> empty .)
    PROCEDURE       reduce using rule 11 (def_tipos -> empty .)
    BEGIN           reduce using rule 11 (def_tipos -> empty .)
    COLON           reduce using rule 11 (def_tipos -> empty .)


state 12

    (3) def_const -> CONST constante . SEMICOLON list_const

    SEMICOLON       shift and go to state 27


state 13

    (7) constante -> ID . DOUBLEEQUALS const_valor

    DOUBLEEQUALS    shift and go to state 28


state 14

    (35) bloco -> BEGIN comando . SEMICOLON lista_com END

    SEMICOLON       shift and go to state 29


state 15

    (39) comando -> ID . nome atrib
    (68) nome -> . DOT ID nome
    (69) nome -> . LSBRACKET parametro RSBRACKET
    (70) nome -> . LPAREN lista_param RPAREN
    (71) nome -> . empty
    (72) empty -> .

    DOT             shift and go to state 31
    LSBRACKET       shift and go to state 32
    LPAREN          shift and go to state 33
    ASSIGNMENT      reduce using rule 72 (empty -> .)
    SEMICOLON       reduce using rule 72 (empty -> .)
    $end            reduce using rule 72 (empty -> .)
    ELSE            reduce using rule 72 (empty -> .)
    FUNCTION        reduce using rule 72 (empty -> .)
    PROCEDURE       reduce using rule 72 (empty -> .)
    BEGIN           reduce using rule 72 (empty -> .)
    COLON           reduce using rule 72 (empty -> .)

    nome                           shift and go to state 30
    empty                          shift and go to state 34

state 16

    (40) comando -> WHILE . exp_logica DO bloco
    (58) exp_logica -> . exp_mat op_logico exp_logica
    (59) exp_logica -> . exp_mat
    (60) exp_mat -> . parametro op_mat exp_mat
    (61) exp_mat -> . parametro
    (66) parametro -> . ID nome
    (67) parametro -> . NUMBER

    ID              shift and go to state 38
    NUMBER          shift and go to state 39

    exp_logica                     shift and go to state 35
    exp_mat                        shift and go to state 36
    parametro                      shift and go to state 37

state 17

    (41) comando -> IF . exp_logica THEN bloco else
    (58) exp_logica -> . exp_mat op_logico exp_logica
    (59) exp_logica -> . exp_mat
    (60) exp_mat -> . parametro op_mat exp_mat
    (61) exp_mat -> . parametro
    (66) parametro -> . ID nome
    (67) parametro -> . NUMBER

    ID              shift and go to state 38
    NUMBER          shift and go to state 39

    exp_logica                     shift and go to state 40
    exp_mat                        shift and go to state 36
    parametro                      shift and go to state 37

state 18

    (42) comando -> RETURN . exp_logica
    (58) exp_logica -> . exp_mat op_logico exp_logica
    (59) exp_logica -> . exp_mat
    (60) exp_mat -> . parametro op_mat exp_mat
    (61) exp_mat -> . parametro
    (66) parametro -> . ID nome
    (67) parametro -> . NUMBER

    ID              shift and go to state 38
    NUMBER          shift and go to state 39

    exp_logica                     shift and go to state 41
    exp_mat                        shift and go to state 36
    parametro                      shift and go to state 37

state 19

    (43) comando -> WRITE . exp_mat
    (60) exp_mat -> . parametro op_mat exp_mat
    (61) exp_mat -> . parametro
    (66) parametro -> . ID nome
    (67) parametro -> . NUMBER

    ID              shift and go to state 38
    NUMBER          shift and go to state 39

    exp_mat                        shift and go to state 42
    parametro                      shift and go to state 37

state 20

    (44) comando -> READ . ID nome

    ID              shift and go to state 43


state 21

    (36) bloco -> COLON comando .

    $end            reduce using rule 36 (bloco -> COLON comando .)
    SEMICOLON       reduce using rule 36 (bloco -> COLON comando .)
    ELSE            reduce using rule 36 (bloco -> COLON comando .)
    FUNCTION        reduce using rule 36 (bloco -> COLON comando .)
    PROCEDURE       reduce using rule 36 (bloco -> COLON comando .)
    BEGIN           reduce using rule 36 (bloco -> COLON comando .)
    COLON           reduce using rule 36 (bloco -> COLON comando .)


state 22

    (2) declaracoes -> def_const def_tipos def_var . def_rot
    (29) def_rot -> . nome_rotina def_var bloco def_rot
    (30) def_rot -> . empty
    (31) nome_rotina -> . FUNCTION ID param_rot COLON tipo_dado
    (32) nome_rotina -> . PROCEDURE ID param_rot
    (72) empty -> .

    FUNCTION        shift and go to state 47
    PROCEDURE       shift and go to state 48
    BEGIN           reduce using rule 72 (empty -> .)
    COLON           reduce using rule 72 (empty -> .)

    def_rot                        shift and go to state 44
    nome_rotina                    shift and go to state 45
    empty                          shift and go to state 46

state 23

    (22) def_var -> VAR . variavel SEMICOLON list_var
    (26) variavel -> . ID lista_id COLON tipo_dado

    ID              shift and go to state 50

    variavel                       shift and go to state 49

state 24

    (23) def_var -> empty .

    FUNCTION        reduce using rule 23 (def_var -> empty .)
    PROCEDURE       reduce using rule 23 (def_var -> empty .)
    BEGIN           reduce using rule 23 (def_var -> empty .)
    COLON           reduce using rule 23 (def_var -> empty .)


state 25

    (10) def_tipos -> TYPE tipo . SEMICOLON list_tipos

    SEMICOLON       shift and go to state 51


state 26

    (14) tipo -> ID . DOUBLEEQUALS tipo_dado

    DOUBLEEQUALS    shift and go to state 52


state 27

    (3) def_const -> CONST constante SEMICOLON . list_const
    (5) list_const -> . constante SEMICOLON list_const
    (6) list_const -> . empty
    (7) constante -> . ID DOUBLEEQUALS const_valor
    (72) empty -> .

    ID              shift and go to state 13
    TYPE            reduce using rule 72 (empty -> .)
    VAR             reduce using rule 72 (empty -> .)
    FUNCTION        reduce using rule 72 (empty -> .)
    PROCEDURE       reduce using rule 72 (empty -> .)
    BEGIN           reduce using rule 72 (empty -> .)
    COLON           reduce using rule 72 (empty -> .)

    constante                      shift and go to state 53
    list_const                     shift and go to state 54
    empty                          shift and go to state 55

state 28

    (7) constante -> ID DOUBLEEQUALS . const_valor
    (8) const_valor -> . STRING
    (9) const_valor -> . exp_mat
    (60) exp_mat -> . parametro op_mat exp_mat
    (61) exp_mat -> . parametro
    (66) parametro -> . ID nome
    (67) parametro -> . NUMBER

    STRING          shift and go to state 57
    ID              shift and go to state 38
    NUMBER          shift and go to state 39

    const_valor                    shift and go to state 56
    exp_mat                        shift and go to state 58
    parametro                      shift and go to state 37

state 29

    (35) bloco -> BEGIN comando SEMICOLON . lista_com END
    (37) lista_com -> . comando SEMICOLON lista_com
    (38) lista_com -> . empty
    (39) comando -> . ID nome atrib
    (40) comando -> . WHILE exp_logica DO bloco
    (41) comando -> . IF exp_logica THEN bloco else
    (42) comando -> . RETURN exp_logica
    (43) comando -> . WRITE exp_mat
    (44) comando -> . READ ID nome
    (72) empty -> .

    ID              shift and go to state 15
    WHILE           shift and go to state 16
    IF              shift and go to state 17
    RETURN          shift and go to state 18
    WRITE           shift and go to state 19
    READ            shift and go to state 20
    END             reduce using rule 72 (empty -> .)

    comando                        shift and go to state 59
    lista_com                      shift and go to state 60
    empty                          shift and go to state 61

state 30

    (39) comando -> ID nome . atrib
    (47) atrib -> . ASSIGNMENT exp_mat
    (48) atrib -> . empty
    (72) empty -> .

    ASSIGNMENT      shift and go to state 63
    SEMICOLON       reduce using rule 72 (empty -> .)
    $end            reduce using rule 72 (empty -> .)
    ELSE            reduce using rule 72 (empty -> .)
    FUNCTION        reduce using rule 72 (empty -> .)
    PROCEDURE       reduce using rule 72 (empty -> .)
    BEGIN           reduce using rule 72 (empty -> .)
    COLON           reduce using rule 72 (empty -> .)

    atrib                          shift and go to state 62
    empty                          shift and go to state 64

state 31

    (68) nome -> DOT . ID nome

    ID              shift and go to state 65


state 32

    (69) nome -> LSBRACKET . parametro RSBRACKET
    (66) parametro -> . ID nome
    (67) parametro -> . NUMBER

    ID              shift and go to state 38
    NUMBER          shift and go to state 39

    parametro                      shift and go to state 66

state 33

    (70) nome -> LPAREN . lista_param RPAREN
    (49) lista_param -> . parametro COMMA lista_param
    (50) lista_param -> . parametro
    (51) lista_param -> . empty
    (66) parametro -> . ID nome
    (67) parametro -> . NUMBER
    (72) empty -> .

    ID              shift and go to state 38
    NUMBER          shift and go to state 39
    RPAREN          reduce using rule 72 (empty -> .)

    lista_param                    shift and go to state 67
    parametro                      shift and go to state 68
    empty                          shift and go to state 69

state 34

    (71) nome -> empty .

    ASSIGNMENT      reduce using rule 71 (nome -> empty .)
    SEMICOLON       reduce using rule 71 (nome -> empty .)
    $end            reduce using rule 71 (nome -> empty .)
    ELSE            reduce using rule 71 (nome -> empty .)
    FUNCTION        reduce using rule 71 (nome -> empty .)
    PROCEDURE       reduce using rule 71 (nome -> empty .)
    BEGIN           reduce using rule 71 (nome -> empty .)
    COLON           reduce using rule 71 (nome -> empty .)
    PLUS            reduce using rule 71 (nome -> empty .)
    MINUS           reduce using rule 71 (nome -> empty .)
    TIMES           reduce using rule 71 (nome -> empty .)
    DIVIDE          reduce using rule 71 (nome -> empty .)
    MORETHAN        reduce using rule 71 (nome -> empty .)
    LESSTHAN        reduce using rule 71 (nome -> empty .)
    EQUALS          reduce using rule 71 (nome -> empty .)
    NOT             reduce using rule 71 (nome -> empty .)
    ARROW           reduce using rule 71 (nome -> empty .)
    LESSOREQUAL     reduce using rule 71 (nome -> empty .)
    DO              reduce using rule 71 (nome -> empty .)
    THEN            reduce using rule 71 (nome -> empty .)
    RSBRACKET       reduce using rule 71 (nome -> empty .)
    COMMA           reduce using rule 71 (nome -> empty .)
    RPAREN          reduce using rule 71 (nome -> empty .)


state 35

    (40) comando -> WHILE exp_logica . DO bloco

    DO              shift and go to state 70


state 36

    (58) exp_logica -> exp_mat . op_logico exp_logica
    (59) exp_logica -> exp_mat .
    (52) op_logico -> . MORETHAN
    (53) op_logico -> . LESSTHAN
    (54) op_logico -> . EQUALS
    (55) op_logico -> . NOT
    (56) op_logico -> . ARROW
    (57) op_logico -> . LESSOREQUAL

    DO              reduce using rule 59 (exp_logica -> exp_mat .)
    THEN            reduce using rule 59 (exp_logica -> exp_mat .)
    SEMICOLON       reduce using rule 59 (exp_logica -> exp_mat .)
    $end            reduce using rule 59 (exp_logica -> exp_mat .)
    ELSE            reduce using rule 59 (exp_logica -> exp_mat .)
    FUNCTION        reduce using rule 59 (exp_logica -> exp_mat .)
    PROCEDURE       reduce using rule 59 (exp_logica -> exp_mat .)
    BEGIN           reduce using rule 59 (exp_logica -> exp_mat .)
    COLON           reduce using rule 59 (exp_logica -> exp_mat .)
    MORETHAN        shift and go to state 72
    LESSTHAN        shift and go to state 73
    EQUALS          shift and go to state 74
    NOT             shift and go to state 75
    ARROW           shift and go to state 76
    LESSOREQUAL     shift and go to state 77

    op_logico                      shift and go to state 71

state 37

    (60) exp_mat -> parametro . op_mat exp_mat
    (61) exp_mat -> parametro .
    (62) op_mat -> . PLUS
    (63) op_mat -> . MINUS
    (64) op_mat -> . TIMES
    (65) op_mat -> . DIVIDE

    MORETHAN        reduce using rule 61 (exp_mat -> parametro .)
    LESSTHAN        reduce using rule 61 (exp_mat -> parametro .)
    EQUALS          reduce using rule 61 (exp_mat -> parametro .)
    NOT             reduce using rule 61 (exp_mat -> parametro .)
    ARROW           reduce using rule 61 (exp_mat -> parametro .)
    LESSOREQUAL     reduce using rule 61 (exp_mat -> parametro .)
    DO              reduce using rule 61 (exp_mat -> parametro .)
    THEN            reduce using rule 61 (exp_mat -> parametro .)
    SEMICOLON       reduce using rule 61 (exp_mat -> parametro .)
    $end            reduce using rule 61 (exp_mat -> parametro .)
    ELSE            reduce using rule 61 (exp_mat -> parametro .)
    FUNCTION        reduce using rule 61 (exp_mat -> parametro .)
    PROCEDURE       reduce using rule 61 (exp_mat -> parametro .)
    BEGIN           reduce using rule 61 (exp_mat -> parametro .)
    COLON           reduce using rule 61 (exp_mat -> parametro .)
    PLUS            shift and go to state 79
    MINUS           shift and go to state 80
    TIMES           shift and go to state 81
    DIVIDE          shift and go to state 82

    op_mat                         shift and go to state 78

state 38

    (66) parametro -> ID . nome
    (68) nome -> . DOT ID nome
    (69) nome -> . LSBRACKET parametro RSBRACKET
    (70) nome -> . LPAREN lista_param RPAREN
    (71) nome -> . empty
    (72) empty -> .

    DOT             shift and go to state 31
    LSBRACKET       shift and go to state 32
    LPAREN          shift and go to state 33
    PLUS            reduce using rule 72 (empty -> .)
    MINUS           reduce using rule 72 (empty -> .)
    TIMES           reduce using rule 72 (empty -> .)
    DIVIDE          reduce using rule 72 (empty -> .)
    MORETHAN        reduce using rule 72 (empty -> .)
    LESSTHAN        reduce using rule 72 (empty -> .)
    EQUALS          reduce using rule 72 (empty -> .)
    NOT             reduce using rule 72 (empty -> .)
    ARROW           reduce using rule 72 (empty -> .)
    LESSOREQUAL     reduce using rule 72 (empty -> .)
    DO              reduce using rule 72 (empty -> .)
    THEN            reduce using rule 72 (empty -> .)
    SEMICOLON       reduce using rule 72 (empty -> .)
    $end            reduce using rule 72 (empty -> .)
    ELSE            reduce using rule 72 (empty -> .)
    FUNCTION        reduce using rule 72 (empty -> .)
    PROCEDURE       reduce using rule 72 (empty -> .)
    BEGIN           reduce using rule 72 (empty -> .)
    COLON           reduce using rule 72 (empty -> .)
    RSBRACKET       reduce using rule 72 (empty -> .)
    COMMA           reduce using rule 72 (empty -> .)
    RPAREN          reduce using rule 72 (empty -> .)

    nome                           shift and go to state 83
    empty                          shift and go to state 34

state 39

    (67) parametro -> NUMBER .
